# mod-llm-chat

./: .gitignore  CMakeLists.txt  README.md  assistant_snippet_8ogdedBZMP.txt  assistant_snippet_EgsU0omrTU.txt  assistant_snippet_M5+C2IX0vb.txt  include.sh
assistant_snippet_EI/: Z3z5vpv.txt  assistant_snippet_EgsU0omrTU.txt
conf/: conf.sh.dist  mod-llm-chat.conf.dist  mod_llm_chat.conf.dist  personalities.json
data/sql/db-characters/base/: db_llm_chat.sql
modules/mod_llm_chat/: CMakeLists.txt  ollama_config.json.in
modules/mod_llm_chat/conf/: mod_llm_chat.conf.dist
sql/: db_llm_chat.sql
sql/auth/base/: character_rp_profiles.sql
src/: LLMChatCharacter.cpp  LLMChatCharacter.h  LLMChatDB.cpp  LLMChatDB.h  LLMChatEvents.cpp  LLMChatEvents.h  LLMChatLogger.cpp  LLMChatLogger.h  LLMChatMemory.cpp  LLMChatMemory.h  LLMChatPersonality.cpp  LLMChatPersonality.h  LLMChatQueue.cpp  LLMChatQueue.h  loader.h  mod-llm-chat-config.h  mod-llm-chat.cpp  mod-llm-chat.h  mod_llm_chat.cpp  mod_llm_chat.h  mod_llm_chat_config.h  mod_llm_chat_loader.cpp  mod_llm_chat_loader.h
